Updated testInferenceModelFieldType to add multiple field mappers